--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grumbler",
+  "name": "fetch-robot",
   "version": "1.0.0",
   "description": "Javascript module template.",
   "main": "index.js",
@@ -33,7 +33,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/krakenjs/grumbler.git"
+    "url": "git://github.com/krakenjs/fetch-robot.git"
   },
   "keywords": [
     "template"
