--- a/.flowconfig
+++ b/.flowconfig
@@ -1,9 +1,11 @@
 [ignore]
 .*/node_modules/babel-plugin-flow-runtime
 .*/node_modules/flow-runtime
+.*/node_modules/.*/dist/module/.*
 [include]
 [libs]
 flow-typed
+src/types.js
 [options]
 module.name_mapper='^src\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
 unsafe.enable_getters_and_setters=true
