--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-plugin-flow-runtime": "^0.11.1",
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-for-of": "^6.8.0",
@@ -104,5 +105,9 @@
     "webpack-stream": "^4.0.0",
     "yargs": "^8.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "cross-domain-utils": "^1.0.23",
+    "post-robot": "^7.0.12",
+    "zalgo-promise": "^1.0.17"
+  }
 }
