--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
   "dependencies": {
     "cross-domain-utils": "^1.0.23",
     "post-robot": "^7.0.12",
+    "url-parse": "^1.1.9",
     "zalgo-promise": "^1.0.17"
   }
 }
